samples/_failures_safe/1761355464_189c36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16ad5db7.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_16ad5db7.c:173: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_16ad5db7.c:172:5: error: expected declaration or statement at end of input
  172 |     for
      |     ^~~
